# default_cpp

./: .clang-format  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
